--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+    <div class="container">
+    <div class="name text-center"><h3>FREDERIC SIMCIC</h3></div>
+
+    <div class="title text-center"><p>Film Maker&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editor&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scenarist</p></div>
+    
+    <div class="navbar d-flex justify-content-around"><%= render "./shared/navbar" %></div>
+
     <%= yield %>
+
+    <div class="credits text-center">© Frederic Simcic</div>
+  </div>
+    
   </body>
 </html>
