--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body id="test">
     <div class="container">
-    <div class="name text-center"><h3>FREDERIC SIMCIC</h3></div>
+    <div class="name text-center"><h3>FREDERIC SEDAIGNE</h3></div>
 
-    <div class="title text-center"><p>Film Maker&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Editor&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Scenarist</p></div>
+    <div class="title letter text-center"><p>FILM MAKER&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;EDITOR&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCENARIST</p></div>
     
     <div class="navbar d-flex justify-content-around"><%= render "./shared/navbar" %></div>
 
@@ -22,6 +22,8 @@
 
     <div class="credits text-center">© Frederic Simcic</div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     
   </body>
 </html>
