--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>FredPortfolio</title>
+    <%= favicon_link_tag "movie-camera6.png" %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,7 +11,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body id="test">
+  <body>
     <div class="container">
     <div class="name text-center"><h3>FREDERIC SEDAIGNE</h3></div>
 
