--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
   <img class="photo" src="photo1.jpg" alt="">
 </div> %>
 
+<!--
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -15,4 +16,15 @@
     </div>
   </div>
 </div>
+-->
 
+<div class="carousel-wrapper">
+  <div class="carousel-container">
+    <div class="carousel">
+      <%= image_tag 'photo1.jpg', class:"photo" %>
+      <%= image_tag 'photo2.jpg', class:"photo" %>
+      <%= image_tag 'photo3.jpg', class:"photo" %>
+    </div>
+  </div>
+</div>
+ 
